--- a/_posts/2025-3-2-Pyquick 2.0.md
+++ b/_posts/2025-3-2-Pyquick 2.0.md
@@ -14,13 +14,15 @@ pyquick 2.0发布时间: 2025-3-29(Windows),4.5(Mac)
 - 新增pip包依赖分析功能,可以查看包的依赖关系(仅限已安装的包)
 - 新增pip包版本检查功能,可以检查包的最新版本
 - ...
+
+
 ## insider的建立
 insider是pyquick的内部测试版,主要用于测试新功能,bug修复等,并提供给insider用户进行测试.
 
 分为dev,beta,rp,stable四个阶段,分别对应开发版,测试版,公测版,稳定版.
 
 
-我希望每个人都喜欢新版本!
+**我希望每个人都喜欢新版本!**
 
 [![](https://github-readme-stats.vercel.app/api/pin/?username=pyquick&repo=pyquick)](https://github.com/pyquick/pyquick)
 
