--- a/_posts/2025-3-2-Pyquick 2.0.md
+++ b/_posts/2025-3-2-Pyquick 2.0.md
@@ -1,29 +1,49 @@
-# Pyquick 2.0即将发布！(dev,Notice)
-pyquick 2.0发布时间: 2025-3-29(Windows),4.5(Mac)
-## 新特性
-- 新增python多线程下载,下载任意文件(限于特定系统,如macOS无法下载windows文件)
-- python下载可以从镜像下载,速度更快
-- 新增pip多管理,可以选择你有的pip版本
-- pip提供更直观的升级模式
-- pip可以升级包到最新版本
-- 增强pip包名字检查
-- 在2.1中,pip安装将全新改版,更加方便快捷
-- 新增设置功能,可以设置pip源,下载路径等
-- 新增pip包管理,可以一次性安装多个包/更新多个包/卸载多个包,甚至所有!
-- 新增pip包搜索功能,可以搜索pypi上的包
-- 新增pip包依赖分析功能,可以查看包的依赖关系(仅限已安装的包)
-- 新增pip包版本检查功能,可以检查包的最新版本
-- ...
+# Pyquick 2.0 即将发布！ 🚀
 
+**发布日期：**  
+- Windows: 2025年3月29日  
+- Mac: 2025年4月5日
 
-## insider的建立
-insider是pyquick的内部测试版,主要用于测试新功能,bug修复等,并提供给insider用户进行测试.
+---
 
-分为dev,beta,rp,stable四个阶段,分别对应开发版,测试版,公测版,稳定版.
+## ✨ 新特性
 
+- **多线程下载**  
+  - 支持下载任意文件  
+  - 系统限制：macOS无法下载Windows文件
 
-**我希望每个人都喜欢新版本!**
+- **镜像下载**  
+  - 提供更快的下载速度
 
-[![](https://github-readme-stats.vercel.app/api/pin/?username=pyquick&repo=pyquick)](https://github.com/pyquick/pyquick)
+- **PIP 增强**  
+  - 多版本管理  
+  - 直观的升级模式  
+  - 包版本检查  
+  - 依赖关系分析（仅限已安装包）  
+  - 批量操作：安装/更新/卸载多个包
 
+- **设置功能**  
+  - 自定义PIP源  
+  - 设置下载路径
 
+- **搜索功能**  
+  - 支持搜索PyPI上的包
+
+---
+
+## 🛠️ Insider 计划
+
+Insider是Pyquick的内部测试版本，分为四个阶段：
+
+| 阶段     | 描述       |
+|----------|------------|
+| Dev      | 开发版     |
+| Beta     | 测试版     |
+| RP       | 公测版     |
+| Stable   | 稳定版     |
+
+---
+
+**我们希望每个人都喜欢新版本！** 😊
+
+![My GitHub stats](https://github-readme-stats.vercel.app/api?username=pyquick&show_icons=true&theme=radical)
